--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Style=Default.svg" />
+    <link rel="icon" type="image/svg+xml" href="StyleDefault.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Pranav Portfolio website" />
     <title>My Portfolio</title>
